--- a/ansible/ansible-playbook.yaml
+++ b/ansible/ansible-playbook.yaml
@@ -68,7 +68,7 @@
           when: minikube.rc != 0
 
     - name: Run Kubernetes cluster in Minikube 
-      ansible.builtin.command:
+      ansible.builtin.shell:
         cmd: minikube start --addons=ingress --cpus=4 --cni=flannel --install-addons=true --kubernetes-version=stable --memory=4g
 
     
