--- a/ansible/ansible-playbook.yaml
+++ b/ansible/ansible-playbook.yaml
@@ -69,6 +69,6 @@
 
     - name: Run Kubernetes cluster in Minikube 
       ansible.builtin.shell:
-        cmd: minikube start --addons=ingress --cpus=4 --cni=flannel --install-addons=true --kubernetes-version=stable --memory=4g
+        cmd: newgrp docker && minikube start --addons=ingress --cpus=4 --cni=flannel --install-addons=true --kubernetes-version=stable --memory=4g
 
     
