--- a/ansible/ansible-playbook.yaml
+++ b/ansible/ansible-playbook.yaml
@@ -70,6 +70,5 @@
     
     - name: Run Kubernetes cluster in Minikube 
       ansible.builtin.shell:
-        cmd: whoami && newgrp docker && minikube start --addons=ingress --cpus=4 --cni=flannel --install-addons=true --kubernetes-version=stable --memory=4g
-
+        cmd: sudo usermod -aG $(whoami) && newgrp docker && minikube start --addons=ingress --cpus=4 --cni=flannel --install-addons=true --kubernetes-version=stable --memory=4g
     
