I gave up temporarily at launching that (but provided a solution to be done)

--- a/ansible/ansible-playbook.yaml
+++ b/ansible/ansible-playbook.yaml
@@ -67,8 +67,8 @@
             deb: https://storage.googleapis.com/minikube/releases/latest/minikube_latest_amd64.deb
           when: minikube.rc != 0
 
-    
-    - name: Run Kubernetes cluster in Minikube 
-      ansible.builtin.raw:
-        cmd: newgrp docker && minikube start --addons=ingress --cpus=4 --cni=flannel --install-addons=true --kubernetes-version=stable --memory=4g
+    # TODO: Write a script to launch Minikube and then execute
+    # - name: Run Kubernetes cluster in Minikube 
+    #   ansible.builtin.shell:
+    #     cmd: newgrp docker && minikube start --addons=ingress --cpus=4 --cni=flannel --install-addons=true --kubernetes-version=stable --memory=4g
     
