--- a/ansible/postgresql-playbook.yaml
+++ b/ansible/postgresql-playbook.yaml
@@ -96,7 +96,7 @@
 
         - name: Generate config file from template
           ansible.builtin.template:
-            src: /home/ansible/templates/pg_hba.j2
+            src: "{{ playbook_dir }}/templates/pg_hba.j2"
             dest: /etc/postgresql/14/main/pg_hba.conf
 
     - name: Set replicas for replication
