--- a/ansible/postgresql-playbook.yaml
+++ b/ansible/postgresql-playbook.yaml
@@ -107,6 +107,13 @@
             state: absent
             path: /var/lib/postgresql/14/main/
 
+        - name: Restart PostgreSQL main cluster on every node
+          ansible.builtin.systemd:
+            name: postgresql@14-main
+            enabled: true
+            state: reloaded
+          become: true
+
         - name: Launch replication on replica
           ansible.builtin.command: pg_basebackup -h {{ hostvars['postgresql-1']['ansible_host'] }} -U replicator -p 5432 --checkpoint=fast -D /var/lib/postgresql/14/main/ -R -Fp -Xs --progress
 
