--- a/ansible/ansible-inventory.yaml
+++ b/ansible/ansible-inventory.yaml
@@ -5,15 +5,15 @@ all:
     ansible_private_key_file: /home/ansible/dbkey.pem
   hosts:
     pgpool:
-      ansible_host: 10.10.10.73
+      ansible_host: 
     ansible:
-      ansible_host: 10.10.10.79
+      ansible_host: 
   children:
     postgresql:
       hosts:
         postgresql-1:
-          ansible_host: 10.10.10.80
-        postgresql-2:
-          ansible_host: 10.10.10.90
-        postgresql-3:
-          ansible_host: 10.10.10.91
+          ansible_host: 
+        postgresql-1:
+          ansible_host: 
+        postgresql-1:
+          ansible_host: 
