--- a/ansible/pgpool-playbook.yaml
+++ b/ansible/pgpool-playbook.yaml
@@ -18,6 +18,12 @@
       ansible.builtin.hostname: 
         name: "{{ inventory_hostname }}"
 
+    - name: Change /etc/hosts
+      ansible.builtin.replace:
+        path: /etc/hosts
+          regexp: '\bnotnamed\b'
+          replace: '{{ inventory_hostname }}'
+
     - name: Delete old config file
       ansible.builtin.file:
         path: "/etc/pgpool2/{{ item.conf }}"
