Added K8s playbook and extended infra with new service VMs

--- a/ansible/infra-playbook.yaml
+++ b/ansible/infra-playbook.yaml
@@ -17,3 +17,6 @@
 
 - name: Provision PGPool load balancer
   ansible.builtin.import_playbook: "{{ playbook_dir }}/pgpool-playbook.yaml"
+
+- name: Provision Kubernetes machines
+  ansible.builtin.import_playbook: "{{ playbook_dir }}/k8s-playbook.yaml"
