Added Jenkins installation, refactored code a bit and added outputs for new VMs

--- a/ansible/jenkins-playbook.yaml
+++ b/ansible/jenkins-playbook.yaml
@@ -5,8 +5,9 @@
 
   tasks:
     - name: Install Jenkins from APT
+      become: true
       block:
-        - name:
+        - name: Download and install necessary packages
           ansible.builtin.apt:
             update_cache: true 
             state: latest
@@ -14,12 +15,20 @@
               - openjdk-17-jdk-headless
               - git
               - net-tools
-        become: true
         
-    - name: 
-# runcmd:
-#   - 'curl -fsSL https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo tee /usr/share/keyrings/jenkins-keyring.asc > /dev/null'
-#   - 'echo deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian-stable binary/ | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null'
-#   - 'sudo apt update'
-#   - 'sudo apt install jenkins -y'
+        - name: Download Jenkins public key and add to keyrings
+          ansible.builtin.get_url:
+            url: https://pkg.jenkins.io/debian-stable/jenkins.io.key
+            dest: /usr/share/keyrings/jenkins-keyring.asc
+
+        - name: Add Jenkins repository to sources list
+          ansible.builtin.copy:
+            content: deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian-stable binary/
+            dest: /etc/apt/sources.list.d/jenkins.list
+
+        - name: Update APT and install Jenkins
+          ansible.builtin.apt:
+            update_cache: true 
+            state: latest
+            name: jenkins
   
