Fixed cloud-init resets and added more of Kubernetes playbook + Ansible playbook refactoring

--- a/ansible/common-playbook.yaml
+++ b/ansible/common-playbook.yaml
@@ -17,4 +17,8 @@
         replace: '{{ inventory_hostname }}'
       register: hosts
 
+    - name: Disable cloud-init to preserve hostname changes
+      ansible.builtin.file:
+        path: /etc/cloud/cloud-init.disabled
+        state: touch
 
