--- a/ansible/ansible-playbook.yaml
+++ b/ansible/ansible-playbook.yaml
@@ -34,10 +34,21 @@
             command: gpg --dearmor -o /etc/apt/keyrings/docker.gpg /tmp/docker.gpg
             responses:
               (?i)overwrite: "y"
+
+        - name: Check architecture
+          ansible.builtin.command: 
+            cmd: dpkg --print-architecture
+          register: arch
+
+        - name: Check Ubuntu version codename
+          ansible.builtin.command: 
+            cmd: lsb_release -cs
+          register: lsb
           
         - name: Add Docker source list to Aptitude sources.list.d directory
-          ansible.builtin.shell: 
-            cmd: echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
+          ansible.builtin.copy: 
+            content: "deb [arch={{ arch.stdout }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ lsb.stdout }} stable"
+            dest: /etc/apt/sources.list.d/docker.list
 
         - name: Install Docker
           ansible.builtin.apt:
