--- a/ansible/k8s-playbook.yaml
+++ b/ansible/k8s-playbook.yaml
@@ -1,9 +1,94 @@
 ---
 - name: Installation and configuration Kubernetes infrastructure
   hosts: kubernetes
+  become: true
   gather_facts: true
+  vars:
+    params: |
+      net.bridge.bridge-nf-call-ip6tables = 1
+      net.bridge.bridge-nf-call-iptables = 1
+      net.ipv4.ip_forward = 1
 
   tasks: 
-    - name: Disable swap on every machine
+    - name: Disable swap on every machine to prevent performance bodge
       ansible.builtin.shell: sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab && swapoff -a
-      become: true
+
+    - name: Add overlay and br_netfiler modules
+      community.general.modprobe:
+        name: 
+          - overlay
+          - br_netfilter
+        state: present
+
+    - name: Write to config file to let iptables see bridged traffic
+      ansible.builtin.copy: 
+        content: {{ params }}
+        dest: /etc/sysctl.d/kubernetes.conf
+
+    - name: Setup containerd
+      block:
+        - name: Add modules to load for containerd
+          ansible.builtin.copy:
+            content: |
+              overlay
+              br_netfilter
+            dest: /etc/modules-load.d/containerd.conf
+
+          # sudo modprobe overlay
+          # sudo modprobe br_netfilter
+
+        - name: Setup sysctl params for containerd
+          ansible.builtin.copy: 
+            content: {{ params }}
+            dest: /etc/sysctl.d/99-kubernetes-cri.conf
+
+    - name: Load sysctl parameters from all system configuration files
+      ansible.builtin.command:
+        cmd: sysctl --system
+
+    - name: Install containerd.io
+      block:
+        - name: Download GPG key from Docker
+          ansible.builtin.get_url:
+            url: https://download.docker.com/linux/ubuntu/gpg
+            dest: /tmp/docker.gpg
+        
+        - name: Dearmor downloaded key and write it to keyring directory
+          ansible.builtin.expect:
+            command: gpg --dearmor -o /etc/apt/keyrings/docker.gpg /tmp/docker.gpg
+            responses:
+              (?i)overwrite: "y"
+
+        - name: Check architecture
+          ansible.builtin.command: 
+            cmd: dpkg --print-architecture
+          register: arch
+
+        - name: Check Ubuntu version codename
+          ansible.builtin.command: 
+            cmd: lsb_release -cs
+          register: lsb
+          
+        - name: Add Docker source list to APT sources.list.d directory
+          ansible.builtin.copy: 
+            content: "deb [arch={{ arch.stdout }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ lsb.stdout }} stable"
+            dest: /etc/apt/sources.list.d/docker.list
+
+        - name: Install containerd
+          ansible.builtin.apt:
+            update_cache: true
+            state: latest
+            name:
+              - containerd.io 
+
+        # sudo mkdir -p /etc/containerd
+        # containerd config default | sudo tee /etc/containerd/config.toml
+
+        - name: Restart containerd service
+          ansible.builtin.systemd:
+            name: containerd
+            enabled: true
+            state: restarted
+          
+
+
