--- a/ansible/k8s-playbook.yaml
+++ b/ansible/k8s-playbook.yaml
@@ -13,11 +13,14 @@
     - name: Disable swap on every machine to prevent performance bodge
       ansible.builtin.shell: sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab && swapoff -a
 
-    - name: Add overlay and br_netfiler modules
+    - name: Add overlay module
       community.general.modprobe:
-        name: 
-          - overlay
-          - br_netfilter
+        name: overlay
+        state: present
+
+    - name: Add br_netfiler module
+      community.general.modprobe:
+        name: br_netfilter
         state: present
 
     - name: Write to config file to let iptables see bridged traffic
@@ -33,9 +36,6 @@
               overlay
               br_netfilter
             dest: /etc/modules-load.d/containerd.conf
-
-          # sudo modprobe overlay
-          # sudo modprobe br_netfilter
 
         - name: Setup sysctl params for containerd
           ansible.builtin.copy: 
